--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
+@import url("./assets/style/header.css");
+@import url("./assets/style/singleBook.css");
+@import url("./assets/style/sider.css");
+
+* {
+  font-family: "Inter" sans-serif;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Inter" sans-serif !important;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Inter" sans-serif !important;
 }
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
